# RG-AI-bot-online-server

./: fly.toml
main_project/: Dockerfile  Procfile  README.md  fly.toml  pyproject.toml  render.yaml  requirements.txt  start.sh
main_project/main/: __main__.py  telegram_server.py
