[project]
name = "main"
version = "1.0.0"
description = "RG Assistant - AI Chatbot with WhatsApp/Telegram Support"
authors = [{name = "RG Team", email = "support@rgassistant.com"}]
requires-python = ">=3.9"
dependencies = [
    "flask>=2.0.0",
    "twilio>=8.0.0",
    "requests>=2.28.0",
    "python-telegram-bot>=20.0.0",
    "python-dotenv>=1.0.0",
    "cohere>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
optional-dependencies = {dev = {file = ["dev-requirements.txt"]}}

[project.scripts]
rg-assistant = "main.twilio_server:main"
